Don't modify OSG Registry with file path
To set a path when loading model files, use an osg ReaderWriter::Options object.

Put locks in ModelRegistry::readNode and ModelRegistry::readImage to avoid
conflicts when files are loaded from both the pager and the main thread.

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -386,6 +386,12 @@
 			<File
 				RelativePath="..\..\simgear\misc\zfstream.hxx">
 			</File>
+			<File
+				RelativePath="..\..\simgear\misc\PathOptions.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\misc\PathOptions.hxx">
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_sgroute"
