Fix cloud layer - point lights visibility issue
Move point lights to render bin 8, clouds to render bin 9. Turn on
AlphaFunc for cloud layers.

Create a StateAttributeFactory object to create and share common state
objects.

--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -15,6 +15,7 @@ include_HEADERS = \
 	SGStateAttributeVisitor.hxx \
 	SGTextureStateAttributeVisitor.hxx \
 	RenderConstants.hxx \
+	StateAttributeFactory.hxx \
 	VectorArrayAdapter.hxx
 
 
@@ -23,6 +24,7 @@ libsgutil_a_SOURCES = \
 	SGSceneFeatures.cxx \
 	SGSceneUserData.cxx \
 	SGStateAttributeVisitor.cxx \
-	SGTextureStateAttributeVisitor.cxx
+	SGTextureStateAttributeVisitor.cxx \
+	StateAttributeFactory.cxx
 
 INCLUDES = -I$(top_srcdir)
