Modified Files: 	Makefile.am Added Files: 	SGExpression.cxx SGExpression.hxx: Add not yet complete but already 	usable expression tree. Will be used with the panel code.

--- a/simgear/structure/Makefile.am
+++ b/simgear/structure/Makefile.am
@@ -10,6 +10,7 @@ include_HEADERS = \
 	subsystem_mgr.hxx \
 	SGAtomic.hxx \
 	SGBinding.hxx \
+	SGExpression.hxx \
 	SGReferenced.hxx \
 	SGSharedPtr.hxx \
 	SGSmplhist.hxx \
@@ -22,6 +23,7 @@ libsgstructure_a_SOURCES = \
 	subsystem_mgr.cxx \
 	SGAtomic.cxx \
 	SGBinding.cxx \
+	SGExpression.cxx \
 	SGSmplhist.cxx \
 	SGSmplstat.cxx
 
