particles from Tiago_G

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -6,6 +6,7 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	animation.hxx \
+	particles.hxx \
 	location.hxx \
 	model.hxx \
 	modellib.hxx \
@@ -22,6 +23,7 @@ include_HEADERS = \
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
+	particles.cxx \
 	location.cxx \
 	model.cxx \
 	modellib.cxx \
