Rewrite livery texture replacement to copy StateSet objects
Also, add a NodeAndDrawableVisitor that descends into osg::Drawable.

That motivation for this is that it's a bad idea to modify state sets
that the osgDB::SharedStateManager might be keeping.

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -1163,6 +1163,12 @@
 			<File
 				RelativePath="..\..\simgear\scene\util\StateAttributeFactory.hxx">
 			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\NodeAndDrawableVisitor.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\NodeAndDrawableVisitor.cxx.hxx">
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\simgear\simgear_config.h-msvc71">
