--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -9,6 +9,7 @@ include_HEADERS = \
 	obj.hxx \
 	pt_lights.hxx \
 	userdata.hxx \
+	ReaderWriterSTG.hxx \
 	SGOceanTile.hxx \
 	SGVasiDrawable.hxx \
 	SGDirectionalLightBin.hxx \
@@ -19,18 +20,23 @@ include_HEADERS = \
 	SGTriangleBin.hxx \
 	SGVertexArrayBin.hxx \
 	GroundLightManager.hxx \
-	ShaderGeometry.hxx
+	ShaderGeometry.hxx \
+	TileCache.hxx \
+	TileEntry.hxx
 
 libsgtgdb_a_SOURCES = \
 	apt_signs.cxx \
 	obj.cxx \
 	pt_lights.cxx \
 	userdata.cxx \
+	ReaderWriterSTG.cxx \
 	SGOceanTile.cxx \
 	SGReaderWriterBTG.cxx \
 	SGVasiDrawable.cxx \
 	GroundLightManager.cxx \
 	ShaderGeometry.cxx \
+	TileCache.cxx \
+	TileEntry.cxx \
 	TreeBin.cxx
 
 INCLUDES = -I$(top_srcdir)
