OSG DatabasePager interface change in 2.5.1
Move OSG version macro from FlightGear to simgear

--- a/simgear/structure/Makefile.am
+++ b/simgear/structure/Makefile.am
@@ -8,6 +8,7 @@ include_HEADERS = \
 	exception.hxx \
 	event_mgr.hxx \
 	subsystem_mgr.hxx \
+	OSGVersion.hxx \
 	SGAtomic.hxx \
 	SGBinding.hxx \
 	SGExpression.hxx \
