Reduce compiler.h to almost nothing (but it's worth keeping around I think, for the MSVC and MipsPro warning stuff).
As a result of this patch, simgear/sg_traits.h can be deleted. So can SGCMath.h,
but I'll do that separately.

There is one more 'mechanical' change to come - getting rid of SG_USING_STD(X),
but I want to keep that separate from everything else. (There's another mechnica
l change, replacing <math.h> with <cmath> and so on *everywhere*, but one step a
t a time)

--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -10,7 +10,7 @@ METAR_DIRS = environment
 EXTRA_DIST = simgear_config.h.vc5 simgear_config.h-msvc71 version.h.in
 
 include_HEADERS = \
-	compiler.h constants.h sg_inlines.h sg_traits.hxx version.h
+	compiler.h constants.h sg_inlines.h version.h
 
 SUBDIRS = \
 	$(compatibility_DIR) \
