3D clouds from Stuart Buchanan. Need a recent driver update, --enable-clouds3d option and a Weather Scenario to show up

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -509,6 +509,12 @@
 				RelativePath="..\..\simgear\scene\sky\cloudfield.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\sky\CloudShaderGeometry.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\sky\CloudShaderGeometry.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\sky\dome.cxx">
 			</File>
 			<File
