--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -1131,6 +1131,13 @@
 				RelativePath="..\..\simgear\scene\util\NodeAndDrawableVisitor.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\util\PrimitiveUtils.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\PrimitiveUtils.hxx">
+			</File>
+
+			<File
 				RelativePath="..\..\simgear\scene\util\QuadTreeBuilder.cxx">
 			</File>
 			<File
