Remove the StaticLeaf visitor slot. Add a nearest point visitor.
Modified Files:
	BVHBoundingBoxVisitor.hxx BVHDebugCollectVisitor.hxx
	BVHLineSegmentVisitor.cxx BVHLineSegmentVisitor.hxx
	BVHStaticGeometryBuilder.hxx BVHStaticLeaf.cxx
	BVHStaticLeaf.hxx BVHSubTreeCollector.cxx
	BVHSubTreeCollector.hxx BVHVisitor.hxx Makefile.am bvhtest.cxx
Added Files:
	BVHNearestPointVisitor.hxx

--- a/simgear/scene/bvh/Makefile.am
+++ b/simgear/scene/bvh/Makefile.am
@@ -17,6 +17,7 @@ include_HEADERS = \
 	BVHLineSegmentVisitor.hxx \
 	BVHLineGeometry.hxx \
 	BVHMotionTransform.hxx \
+	BVHNearestPointVisitor.hxx \
 	BVHNode.hxx \
 	BVHStaticBinary.hxx \
 	BVHStaticData.hxx \
