--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -15,6 +15,7 @@ include_HEADERS = \
 	SGDirectionalLightBin.hxx \
 	SGLightBin.hxx \
 	SGOceanTile.hxx \
+	SGReaderWriterBTG.hxx \
 	SGReaderWriterBTGOptions.hxx \
 	SGTexturedTriangleBin.hxx \
 	SGTriangleBin.hxx \
