Add a simple class to subdivide Bezier curves

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -288,6 +288,9 @@
 			Name="Lib_sgmath"
 			Filter="">
 			<File
+				RelativePath="..\..\simgear\math\beziercurve.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\math\interpolater.cxx">
 			</File>
 			<File
