Provide a thread safe SGWeakPtr implementation. Extend SGAtomic with atomic exchange and add. Import updates from the original implementation of that in OpenFDM.
Modified Files:
 	Makefile.am SGAtomic.cxx SGAtomic.hxx SGReferenced.hxx
 	SGSharedPtr.hxx
Added Files:
 	SGWeakPtr.hxx SGWeakReferenced.hxx

--- a/simgear/structure/Makefile.am
+++ b/simgear/structure/Makefile.am
@@ -17,6 +17,8 @@ include_HEADERS = \
 	SGSharedPtr.hxx \
 	SGSmplhist.hxx \
 	SGSmplstat.hxx \
+	SGWeakPtr.hxx \
+	SGWeakReferenced.hxx \
 	Singleton.hxx
 
 libsgstructure_a_SOURCES = \
