--- a/simgear/scene/material/Makefile.am
+++ b/simgear/scene/material/Makefile.am
@@ -5,11 +5,19 @@ lib_LIBRARIES = libsgmaterial.a
 noinst_HEADERS =
 
 include_HEADERS = \
+	Effect.hxx \
+	EffectGeode.hxx \
+	Pass.hxx \
+	Technique.hxx \
 	mat.hxx \
 	matlib.hxx \
 	matmodel.hxx
 
 libsgmaterial_a_SOURCES = \
+	Effect.cxx \
+	EffectGeode.cxx \
+	Pass.cxx \
+	Technique.cxx \
 	mat.cxx \
 	matlib.cxx \
 	matmodel.cxx
