Construct effects from property lists
The material code constructs a property list from its input parameters.

Enable dumping of Pass and Technique objects to a file.

Default effect now uses texture node instead of texture0

--- a/simgear/scene/material/Makefile.am
+++ b/simgear/scene/material/Makefile.am
@@ -22,6 +22,7 @@ libsgmaterial_a_SOURCES = \
 	GLPredicate.cxx \
 	Pass.cxx \
 	Technique.cxx \
+	makeEffect.cxx \
 	mat.cxx \
 	matlib.cxx \
 	matmodel.cxx
