Compile latest SimGear under MSVC9

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1188,6 +1188,42 @@
 			Name="Lib_sgmaterial"
 			>
 			<File
+				RelativePath="..\..\simgear\scene\material\Effect.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Effect.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectCullVisitor.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectCullVisitor.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectGeode.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectGeode.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\GLPredicate.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\GLPredicate.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\makeEffect.cxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\material\mat.cxx"
 				>
 			</File>
@@ -1209,6 +1245,22 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\scene\material\matmodel.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Pass.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Pass.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Technique.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Technique.hxx"
 				>
 			</File>
 		</Filter>
